--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,11 @@
   "icons": [
     {
       "src": "blue-blue-logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
