--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#d02753",
   "background_color": "#ffffff"
 }
