--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Ziad Hisham Ali | Protfolio",
   "icons": [
     {
-      "src": "blue-blue-logo.png",
+      "src": "ziad-logo-new-2.png",
       "sizes": "512x512",
       "type": "image/png"
     },
